# dtcover

./: .gitignore  LICENSE  README.md  attack.py  attack.sh  attack_metrics.sh  attack_retrain_arg_baselines.sh  attack_retrain_baselines.sh  attack_retrain_valid_baselines.sh  pyproject.toml  requirements.txt  search_grid.sh  search_threshold.sh
dtcover/: core.py  cover_attack.py  cover_target.py  hooks.py  injection.py  result_parser.py  snapshots.py  utils.py  venn.py
dtcover/coverage/: coverage_infer.py  neuron_coverage.py
dtcover/data/: mmlu.py
dtcover/goal_function_results/: mcq_goal_function_result.py
dtcover/metrics/: __init__.py  ncov_mlp.py  ncov_pair_atten.py  ncov_pos_atten.py
dtcover/monitors/: base_monitor.py  reduce_monitor.py  reduce_ops.py
dtcover/transformations/: multi_transformation.py
nncov/: core.py  cover_attack.py  cover_target.py  helper.py  hooks.py  inference.py  injection.py  llm_attacker.py  llm_chat.py  logging.py  result_parser.py  utils.py
nncov/attack_recipes/: leap_2023.py
nncov/coverage/: __init__.py  coverage.py  coverage_data.py  coverage_infer.py  coverage_utils.py  kmn_coverage.py  neuron_coverage.py
nncov/data/: loader.py
nncov/goal_function_results/: next_token_goal_function_result.py
nncov/metrics/: __init__.py  kmncov_mlp.py  (+11 more)
rqs/: case_study.py  discussion_lines.py  discussion_lines_with_threshold.py  draw_search_threshold.py  overlaps.py  summary.py  summary_metrics.py  time_efficiency.py
scripts/: dataset_summary.py  generate_retrain_baselines_dataset.py  generate_retrain_dataset.py  split_datasets.py
(+63 files in other folders)
